[package]
name = "purpura_oazo"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
once_cell = "1.19.0"
rlua = { version = "0.19.7", features = ["builtin-lua54"] }
serde = { version = "1.0.193", features = ["derive"] }
serenity = "0.12.0"
surrealdb = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
