[package]
name = "purpura_oazo"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Purpura Oazo is an in development, ideally modular scalable discord bot written is the holy language that is Rust by a team of toasters."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.5.1", features = ["tls", "urispec"] }
clap = { version = "4.4.11", features = ["cargo", "unstable-styles", "unstable-doc", "unstable-v5", "string"] }
clap_builder = { version = "4.4.11", features = ["env", "unstable-doc", "unstable-styles", "unstable-v5", "cargo"] }
num_cpus = "1.16.0"
once_cell = "1.19.0"
rlua = { version = "0.19.7", features = ["builtin-lua54"] }
serde = { version = "1.0.193", features = ["derive"] }
serenity = "0.12.0"
surrealdb = "1.0.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json", "regex", "serde", "serde_json", "tracing"] }
